@@ -1,3 +1,7 @@
+2006-12-21  Hans-Peter Nilsson  <hp@axis.com>
+
+	* config.in, configure: Regenerate.
+
 2006-10-18  Dave Brolley  <brolley@redhat.com>
 
 	* Contribute the following changes:
